--- a/src/features/profile/components/ProfileGear.module.css
+++ b/src/features/profile/components/ProfileGear.module.css
@@ -75,12 +75,12 @@
 .itemRow {
   display: flex;
   align-items: center;
-  padding: var(--space-2) 0;
+  padding: calc(var(--space-1) * 1.5) 0;
 }
 
 .itemRow:not(:last-child) {
   border-bottom: 1px solid rgba(148, 163, 184, 0.05);
-  padding-bottom: var(--space-2);
+  padding-bottom: calc(var(--space-1) * 1.5);
 }
 
 .itemName {
