--- a/src/features/certifications/components/CertificationCard.module.css
+++ b/src/features/certifications/components/CertificationCard.module.css
@@ -26,6 +26,13 @@
   flex-shrink: 0;
   width: 48px;
   height: 48px;
+  position: relative;
+}
+
+.badgeImageWrapper {
+  position: relative;
+  width: 100%;
+  height: 100%;
 }
 
 .badgeImage {
